deploy/lb/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  namespace: petclinic
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: nginx-server
